--- a/module4-solution/src/menuapp/templates/categories.template.html
+++ b/module4-solution/src/menuapp/templates/categories.template.html
@@ -1,4 +1,4 @@
 <h3> Menu Categories </h3>
 <ul ng-repeat="category in categories.data" ui-sref="items({categoryName: category.short_name})">
-  <li class="categories"> {{category.name}} </li>
+  <li> <span class="categories">{{category.name}}</span></li>
 </ul>
